# ccosmic-text

./: .gitignore  Cargo.toml  build.sh  build_release.sh  cbindgen.toml
example/: CMakeLists.txt
example/src/: main.c
